--- a/package.json
+++ b/package.json
@@ -49,13 +49,15 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "^8.57.0",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.456.0",
-    "next": "^15.0.3",
+    "next": "^14.2.18",
     "next-themes": "^0.4.3",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^9.3.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
+    "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
